--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,12 @@ h1 {
   @media screen and (min-width:300px) and (max-width: 600px){
 
       .divtext{
-          font-size: 1em;
+          font-size: 0.5em;
+      }
+  }
+  @media screen and (min-width:600px) and (max-width: 1000px) {
+      .divtext{
+          font-size: 0.8em;
       }
   }
 
