--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,8 @@ h1 {
     left: 0;
     width: 100%;
     height: 400px;
-    background-repeat:no-repeat;
-    background-size:100% auto;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
 }
 
 .wrapper {
@@ -40,13 +40,13 @@ h1 {
 
 .divtext {
     margin-top: 40px;
-    position:absolute;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width:50%;
+    width: 50%;
     height: 75%;
-    text-align:center;
+    text-align: center;
     background-color: white;
     color: black;
     border: solid 1px black;
@@ -54,33 +54,38 @@ h1 {
     font-family: 'New Tegomin', serif;
     font-weight: bold;
 }
-@media (min-width: 1200px) {
-    .divtext{
-      font: size 5em;;
-    }
-  }
-  @media screen and (min-width:300px) and (max-width: 600px){
 
-      .divtext{
-          font-size: 0.5em;
-      }
-  }
-  @media screen and (min-width:600px) and (max-width: 1000px) {
-      .divtext{
-          font-size: 0.8em;
-      }
-  }
+@media (min-width: 1200px) {
+    .divtext {
+        font: size 5em;
+        ;
+    }
+}
+
+@media screen and (min-width:300px) and (max-width: 600px) {
+
+    .divtext {
+        font-size: 0.5em;
+    }
+}
+
+@media screen and (min-width:600px) and (max-width: 1000px) {
+    .divtext {
+        font-size: 0.8em;
+    }
+}
 
 .logoIcon {
     width: 50px;
     height: 50px;
 }
 
-h2{
+h2 {
     display: flex;
     justify-content: center;
     align-content: center;
 }
+
 figure {
     border: thin #c0c0c0 solid;
     display: flex;
@@ -103,9 +108,28 @@ p {
     font-weight: bold;
 }
 
-.indent{
+.indent {
     text-indent: 30px;
 }
-h3{
+
+h3 {
     font-size: 5em;
+}
+
+legend {
+    background-color: lightcyan;
+}
+
+fieldset {
+    border: solid black 1px;
+}
+
+.logoIcon {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+footer{
+    background-color: #FF0016;
 }
