--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ span.border {
     font-family: 'New Tegomin', serif;
     font-weight: bold;
     padding: 18px;
-    font-size: 2em;
+    font-size: 3.5em;
     letter-spacing: 10px;
 }
 
@@ -68,6 +68,12 @@ h1 {
     height:500px;
     background-color:white;
     font-size: 3em;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 @media screen and (min-width: 300px) and (max-width: 800px){
@@ -81,14 +87,14 @@ figure {
     display: flex;
     flex-flow: column;
     padding: 5px;
-    max-width: 400px;
+    max-width: 500px;
     margin: auto;
     margin-bottom: 10px;
 }
 
 figure img {
-    max-width: 400px;
-    max-height: 200px;
+    max-width: 500px;
+    max-height: 250px;
 }
 
 figcaption {
@@ -109,6 +115,12 @@ figcaption {
 
 fieldset{
     border: solid black 1px;
+    border-radius: 10px;
+}
+form{
+    width: 50%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .logoSmall{
@@ -118,4 +130,29 @@ fieldset{
     margin-left: auto;
     margin-right: auto;
     display: block;
+}
+
+.hiraganaModal{
+    max-height: 100%;
+    max-width: 100%;
+}
+
+.modal-content{
+        width: 700px;
+        height: 400px;
+}
+
+@media screen and (min-width: 300px) and (max-width: 700px){
+    .modal-content{
+       max-width: 100%;
+       height: 200px;
+    }
+}
+
+@media screen and (min-width: 700px) and (max-width: 1000px){
+    .modal-content{
+       max-width: 100%;
+       margin-right: auto;
+
+    }
 }
