--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,15 +113,7 @@ figcaption {
     font-size: 2em;
 }
 
-fieldset{
-    border: solid black 1px;
-    border-radius: 10px;
-}
-form{
-    width: 50%;
-    margin-right: auto;
-    margin-left: auto;
-}
+
 
 .logoSmall{
     max-height: 100%;
@@ -190,6 +182,9 @@ form{
 		border-top-left-radius:20px;
 		border-bottom-left-radius:20px;
 	}
+    .btn2{
+        margin-left: 2em;
+    }
 }
 @media screen and (min-width: 642px) and (max-width:800px){
 	.main-content{width: 70%;}
